<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/songs_recognition_galaxy"
    tools:context=".RecognizeSongsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button

        android:id="@+id/btn_recording"
        android:layout_width="260dp"
        android:layout_height="36dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="90dp"
        android:background="@color/recordColor"
        android:bottomLeftRadius="30dp"
        android:bottomRightRadius="30dp"
        android:ellipsize="middle"
        android:fontFamily="monospace"
        android:radius="60dp"
        android:shape="oval"


        android:text="@string/start_recognition"
        android:textColor="@color/tabTextForeColor"
        android:textColorHighlight="#00F8EBEB"
        android:topLeftRadius="30dp"

        android:topRightRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:textSize="18sp" />

    <Button

        android:id="@+id/btn_cancel"
        android:layout_width="260dp"
        android:layout_height="36dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="32dp"
        android:background="@color/recordColor"
        android:bottomLeftRadius="30dp"
        android:bottomRightRadius="30dp"
        android:ellipsize="middle"
        android:fontFamily="monospace"
        android:radius="60dp"
        android:shape="oval"


        android:text="@string/stop_recognition"
        android:textColor="@color/tabTextForeColor"
        android:textColorHighlight="#00F8EBEB"
        android:topLeftRadius="30dp"

        android:topRightRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/textview_result"
        android:layout_width="370dp"
        android:layout_height="94dp"
        android:layout_marginTop="248dp"
        android:text="TextView"
        android:textColor="@color/tabTextForeColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/lauoyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/vol"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000" />

        <Switch
            android:id="@+id/aswitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textOff="@string/auto_switch_open"
            android:textOn="@string/auto_switch_close" />

        <TextView
            android:id="@+id/auto_switch_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/auto_switch_label"
            android:textColor="#000000" />

        <Button
            android:id="@+id/request"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_radio_meta" />

        <TextView
            android:id="@+id/result"
            android:layout_width="400dp"
            android:layout_height="78dp"
            android:layout_marginTop="118dp"
            android:textColor="#000000" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
