<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/songs_recognition_galaxy"
    tools:context="com.e.w_audio_player.RecognizeSongsActivity">


    <TextView
        android:id="@+id/volume"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="406dp"
        android:layout_marginLeft="406dp"
        android:layout_marginBottom="500dp"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:visibility="visible"
        android:layout_width="406dp"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/auto_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <Switch
        android:id="@+id/auto_switch"
        android:layout_width="80dp"
        android:layout_height="26dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:textColor="#FFFFFF"
        android:textOff="@string/auto_switch_open"
        android:textOn="@string/auto_switch_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <TextView
        android:id="@+id/auto_switch_label"
        android:layout_width="112dp"
        android:layout_height="28dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:text="@string/auto_switch_label"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintVertical_bias="0.887" />

    <Button
        android:id="@+id/start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"

        android:layout_marginLeft="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:background="@color/recordColor"
        android:text="@string/start"
        android:textColor="@color/tabTextForeColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:layout_marginBottom="72dp"
        android:background="@color/recordColor"
        android:text="@string/cancel"
        android:textColor="@color/tabTextForeColor"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/request_radio_meta"
        android:visibility="gone"
        android:background="@null"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:layout_marginBottom="8dp"
        android:text="@string/request_radio_meta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="364dp"
        android:layout_height="351dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/volume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
